dependencies changed to compile with java11 see https://stackoverflow.com/questions/52502189/java-11-package-javax-xml-bind-does-not-exist